# Martinbot

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
conf/: config.yaml  settings.py
default_prompt_files/llm/: martin_identities_365.csv  system_prompt_template.md  user_prompt_template.md
default_prompt_files/vlm/: system_prompt.txt  user_prompt.md
martin/claw/: send_message.py
martin/core/: chat_merger.py  chat_parser.py  session_trigger.py
martin/equipments/: capture_file.py  fix_json_str.py  load_config.py  logging_config.py  number_to_morse.py  wechat_locator.py
martin/mind/: extract_identity.py  glm_4_7_infer.py
martin/skills/: schedule_task.py  skill_tree.py  web_search.py
martin/vision/: glm_4_6v_ocr.py  screen_monitor.py
